--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "horsemen-investigations",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Website for Horsemen Investigations Inc.",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Matt Carmichael",
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "gatsby": "^3.9.1",
     "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-gatsby-cloud": "^2.9.1",
