--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
+    "react-gsap": "^3.2.1",
     "react-helmet": "^6.1.0",
+    "react-scrollmagic": "^2.3.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
