--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-gsap": "^3.2.1",
     "react-helmet": "^6.1.0",
     "react-scrollmagic": "^2.3.0",
+    "react-social-icons": "^5.5.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
