--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Matt Carmichael",
   "dependencies": {
     "aos": "^2.3.4",
+    "babel-plugin-styled-components": "^1.13.2",
     "bootstrap": "^5.0.2",
+    "framer-motion": "^4.1.17",
     "gatsby": "^3.9.1",
     "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-gatsby-cloud": "^2.9.1",
@@ -15,6 +17,7 @@
     "gatsby-plugin-offline": "^4.9.0",
     "gatsby-plugin-react-helmet": "^4.9.0",
     "gatsby-plugin-sharp": "^3.9.0",
+    "gatsby-plugin-styled-components": "^4.10.0",
     "gatsby-source-filesystem": "^3.9.0",
     "gatsby-transformer-sharp": "^3.9.0",
     "prop-types": "^15.7.2",
@@ -25,7 +28,8 @@
     "react-helmet": "^6.1.0",
     "react-scrollmagic": "^2.3.0",
     "react-social-icons": "^5.5.1",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "typeface-poppins": "^1.1.13"
   },
   "devDependencies": {
     "prettier": "2.3.2"
